Update no Menu Lateral
Implementei as funções de Volume e de Brilho

--- a/UDesenho.lfm
+++ b/UDesenho.lfm
@@ -1,7 +1,7 @@
 object Desenho: TDesenho
-  Left = 397
+  Left = 373
   Height = 480
-  Top = 241
+  Top = 217
   Width = 800
   BorderStyle = bsNone
   ClientHeight = 480
@@ -9,7 +9,7 @@ object Desenho: TDesenho
   Color = clWhite
   OnShow = FormShow
   LCLVersion = '1.4.0.4'
-  object pnlDraw: TPanel
+  object pnlDesenho: TPanel
     Left = 0
     Height = 480
     Top = 0
@@ -18,23 +18,14 @@ object Desenho: TDesenho
     Color = clWhite
     ParentColor = False
     TabOrder = 0
-    OnMouseDown = pnlDrawMouseDown
-    OnMouseMove = pnlDrawMouseMove
-    OnMouseUp = pnlDrawMouseUp
+    OnMouseDown = pnlDesenhoMouseDown
+    OnMouseMove = pnlDesenhoMouseMove
+    OnMouseUp = pnlDesenhoMouseUp
   end
-  object btnSair: TSpeedButton
-    Left = 784
-    Height = 15
-    Top = 0
-    Width = 15
-    Caption = 'X'
-    Flat = True
-    OnClick = btnSairClick
-  end
-  object GroupBox1: TGroupBox
+  object grpTraco: TGroupBox
     Left = 720
     Height = 63
-    Top = 26
+    Top = 55
     Width = 73
     Caption = 'Traço'
     ClientHeight = 37
@@ -56,14 +47,14 @@ object Desenho: TDesenho
       ParentColor = False
       ParentFont = False
     end
-    object upTraco: TUpDown
+    object udTraco: TUpDown
       Left = 49
       Height = 42
       Top = 0
       Width = 17
       Max = 25
       Min = 1
-      OnClick = upTracoClick
+      OnClick = udTracoClick
       Position = 10
       TabOrder = 0
       Wrap = False
@@ -129,68 +120,27 @@ object Desenho: TDesenho
     Width = 73
     OnMouseDown = AtualizarCor
   end
-  object shLockBackground: TShape
+  object btnMenu: TSpeedButton
+    Left = 758
+    Height = 36
+    Top = 5
+    Width = 36
+    OnClick = btnMenuClick
+  end
+  object shTrava: TShape
     Left = 719
     Height = 36
     Top = 437
     Width = 75
     Brush.Color = clLime
+    OnMouseDown = shTravaMouseDown
   end
-  object imgLockOpen: TImage
-    Left = 746
+  object imgTrava: TImage
+    Left = 745
     Height = 32
     Top = 439
     Width = 32
-    AutoSize = True
-    Picture.Data = {
-      1754506F727461626C654E6574776F726B47726170686963BE01000089504E47
-      0D0A1A0A0000000D4948445200000020000000200806000000737A7AF4000001
-      8549444154785EED97CD6A834010C733544205A1DBAB9706BCE48304F109DA37
-      E81B347982DA27A83DF6669FA0E91BF411F204B224205E044F5EBB3D091EB423
-      78308B90CDBA28940C0CC33233CBCFFDCF2E099465391AD240D5468EE3DC6070
-      D11FD16D2E4DD1BFD1FD20087E9503D8B6FD8CC14327274A19BA4729FD5006B0
-      5AAD3E01607D4E0FCABEDDEFF79BCE00CBE5F2B5FE7219F30E87C39B34C062B1
-      B8C390B4A42800F855ACD713FC6217E37D4BED441A60369BB51DFD360CC34D5B
-      FD7C3E7FAAF2BC14D200D3E9F4871BBA5D14450F277A78C998260B5014053FF1
-      BE40CF8E4B902E00476B00A002D34FD1D53C4496651DED14C731C8F4759140BA
-      EF7F00A0962AFA8697004CD3ACEFB35263699ADE8A146A782464A4DE84F7D4AA
-      2319D22E00DA19D7695BC7F51012F88CB1976A41086118DCBE0168E31E27BD4B
-      8035BE6118B406F000A0770948E3A73641A0DE015896655FD542D7751F03E95B
-      82A439030060AB0280F1788C04EA2DCF73B8BC842276553F2AD78A0118FABB48
-      E1E07FCFFF005CA6BDF0A3B1D3260000000049454E44AE426082
-    }
-  end
-  object imgLockClose: TImage
-    Left = 740
-    Height = 32
-    Top = 439
-    Width = 32
-    AutoSize = True
-    Picture.Data = {
-      1754506F727461626C654E6574776F726B47726170686963E101000089504E47
-      0D0A1A0A0000000D4948445200000020000000200806000000737A7AF4000001
-      A849444154785EED56416A0231149D81220882E9CA858B0A6E44518227E811BC
-      41F5049D9EA0D31BA427A8DEA0BD8127905451045DE8625C6756EE9CBE8111E4
-      136B0836036D3F7C7EE0FF0FCFF79E99F849927879C68DAEE1FBFED9856EB75B
-      4609903D24276D897C478AC96412EBF6F1832900F3E09C3F1E0E871047766E24
-      CB00B3A194F2D582017D743A9D37A0EF1B8E33A4C00E9F4EA783EF068907F412
-      B4DBED6794D052E670369BBD1009CC01B45AAD3B948D06BCC49C486BD6A881A1
-      00F55E335B9BCFE75B2B0FA49A6B4C395C2C1694DA4FE447B3D97C48FBC47821
-      CAC0CA0358EE11D4E3E572795657001B351A8D1A91AC670D000C50C70B839DB1
-      C6949E2D00EA0F69C09AA45A5B03A0A659AFD7DB4B3BABD52AAED7EBB461CF80
-      4D60EF970030D0D272CF3D03E65771B55A2D67B71FF3AE1B2A8AA25B2306008C
-      79D70F6624C16EB78B2B958AF30709D5F0AF01B0FFFB0DB3DACF8301A1947A4A
-      0F8C318512B806204FE637CE25C08C28954A923C5C9C32C090FC780620E700D4
-      7EBF1FA58762B12850986B0936A71E8004DC3503BC50282447C0D796E0FF2654
-      3FF139D6BE07F28C2F8FACF1CDEDAD8CBC0000000049454E44AE426082
-    }
-  end
-  object imgLockFront: TImage
-    Left = 719
-    Height = 36
-    Top = 437
-    Width = 75
-    OnClick = imgLockFrontClick
-    Transparent = True
+    AntialiasingMode = amOn
+    OnClick = imgTravaClick
   end
 end
