--- a/UMenuLateral.lfm
+++ b/UMenuLateral.lfm
@@ -1,31 +1,17 @@
 object MenuLateral: TMenuLateral
-  Left = 850
+  Left = 854
   Height = 480
-  Top = 192
-  Width = 123
+  Top = 200
+  Width = 124
   BorderStyle = bsNone
   Caption = 'MenuLateral'
   ClientHeight = 480
-  ClientWidth = 123
+  ClientWidth = 124
   Color = 16777124
   OnActivate = FormActivate
+  OnCreate = FormCreate
   OnShow = FormShow
   LCLVersion = '1.4.0.4'
-  object imgLinha: TImage
-    Left = 8
-    Height = 20
-    Top = 94
-    Width = 101
-    Picture.Data = {
-      1754506F727461626C654E6574776F726B477261706869638500000089504E47
-      0D0A1A0A0000000D49484452000000140000001408060000008D891D0D000000
-      0473424954080808087C086488000000097048597300000B1300000B1301009A
-      9C180000002749444154388D63601805A360180246285DCEC0C0A041A1593718
-      18183A99283464148C8291010095F5020461F6A5130000000049454E44AE4260
-      82
-    }
-    Stretch = True
-  end
   object btnRecolhe: TSpeedButton
     Left = 87
     Height = 24
@@ -92,7 +78,7 @@ object MenuLateral: TMenuLateral
   object imgSair: TImage
     Left = 89
     Height = 20
-    Top = 116
+    Top = 171
     Width = 20
     AutoSize = True
     Picture.Data = {
@@ -112,54 +98,69 @@ object MenuLateral: TMenuLateral
     }
   end
   object imgBrilho: TImage
-    Left = 89
-    Height = 20
-    Top = 65
-    Width = 20
-    AutoSize = True
+    Left = 84
+    Height = 32
+    Top = 124
+    Width = 32
+    AntialiasingMode = amOn
+    OnClick = imgBrilhoClick
     Picture.Data = {
-      1754506F727461626C654E6574776F726B477261706869636801000089504E47
-      0D0A1A0A0000000D49484452000000140000001408060000008D891D0D000001
-      2F4944415478DABD948B6DC23010409D0D3242BA81D92099A06582C204151334
-      9D0098206402DA09C8066483328247A84F7D16AEF1A956857AD2C9D1F9FCEE13
-      9F2B7367A90AFD4E5EDB12FF7B006BAF4E030EACEB02608DBFD83BAF730A6CBC
-      9E713C24508B7D8A6027EC334097CBD0E258E324F2421606E0C8F73185693DB4
-      642BEB2BD906C8A3D795D777AF1F0470F161EDA7B464BAE470AE8A0DC14C09F0
-      48E4B5B2DF93ED2207EC292DB64906FB4C7669051D6B90B78A9E3C47C6E0243D
-      DA29C027F37D65C4771BD947ADE49E200FCABE04BCE45AA201E5DAC89D9C39E4
-      22FB960C17407F05B6347C6FAE9330B167812FA96024A80A5C99EBF875802CD0
-      302953E4E74C347629B0F1FAC9B79479480235F436C880FD073497A131B71756
-      7B6D062A506759937F7D0FFF042C962FB7F04BF512D51F7E0000000049454E44
-      AE426082
+      1754506F727461626C654E6574776F726B477261706869635202000089504E47
+      0D0A1A0A0000000D4948445200000020000000200806000000737A7AF4000000
+      0473424954080808087C086488000000097048597300000B1300000B1301009A
+      9C18000001F4494441545885C5963B4B034114853FA3602C7C20266023D85828
+      061B112C2DECC457235A8885FFC0D6C2460B85A849A36025048B549636FE01C1
+      C20728121041B1159242C558CC0E5EC79964B31BB3072E0C7BCF9D73F60E7377
+      213812C05A88FA50480057401948375A3C095C7BE23A1A66C2261ECA4493E559
+      1F30EEE0AF038315F63B04CE1DB913BFA616B0BF61D8B022E6D7D57FA12540CD
+      3D700ADC0225D48D1803A681F67A98721DC113305BA1AE03D8023E1DF5A10C5C
+      003D3EEB2781623D0D3C19E2292007BC021FC003B009740ACE5C500349E0C628
+      946D5F04DE2D9B978102D02FB87923BF1F44FC4EE45315C4755C02CD1E7FD492
+      779A704DB86DC1C95511D731236A9E2DF93D533CE1102F032B82F7EAD34046D4
+      9C3938BB9A100396812147674A62DDEDE098E872D44BAC0203DAC08E74642021
+      D68F3E0D14C43A69C9978029D440FB85347F5B752CF29B96BC195FC0B0C78F7B
+      62325F04262AB9374DBCA1261CA87B5EA862202BF65AAA555CE3C028DC12B97E
+      D455B3BD79969F6F4B2BAAC592E34B1CFE4EC24FD478D568465DB50CEA8836F8
+      69BBC691C5A46FD8BE0545D478AD8656877868033AF2A80967228E3A73B3ED55
+      0DD4FA3F30EFC50B6A789550576D0468AB71AF4006347ABD088DC87FC96A4506
+      F719FBBEE761B11FA5B8C65E94E21ABB518A6B0C44295E177C0333BC155BBC88
+      A7400000000049454E44AE426082
     }
   end
-  object imgVolume: TImage
-    Left = 89
-    Height = 20
-    Top = 37
-    Width = 20
-    AutoSize = True
+  object imgMudo: TImage
+    Left = 84
+    Height = 32
+    Top = 60
+    Width = 32
+    AntialiasingMode = amOn
+    OnClick = imgMudoClick
     Picture.Data = {
-      1754506F727461626C654E6574776F726B477261706869639D01000089504E47
-      0D0A1A0A0000000D49484452000000140000001408060000008D891D0D000000
+      1754506F727461626C654E6574776F726B477261706869635F02000089504E47
+      0D0A1A0A0000000D4948445200000020000000200806000000737A7AF4000000
       0473424954080808087C086488000000097048597300000B1300000B1301009A
-      9C180000013F49444154388DA5D4CD2B056114C7F18F6BE17563719510A524B1
-      92C55D2B8AB5C842365656AC147F82BF8144F25F582A3B525616A2285B216F63
-      F13C93B7B963B8BF9A4E33E737DF799EF39C33F58AA9034DB82FE8CFD522DEF0
-      84C95A6173784512AFDD0C4F4B51D83C5E3EC112EC7FF3B4E30A53BFC156846D
-      26F28103B8116A3BFC39D1872154B09701CA020EC6382AD4F70875B09903A806
-      2CE316ABF17E23E627F859A722C0661CE3119DE88E25DA2EA13EA386BFE91E6B
-      68C00C2E71864AE91FB0540731A687718EAE5A80A99218EB90D4021C8BF124C6
-      3EA127FF7528AD38C58330E73D31BF5512DAE6AF6A14A6641DD7588ECFF75243
-      AFD0F523D82EB042E88FB182671CE6AD60C9D79F42B5D11B141AFCCEC7E454D5
-      6CFC721EB08C0B71428A68DAD743DBC9F0341585A55A10B6FF88F1BFBE5C4D65
-      B41531BE03C5D1796B149D02140000000049454E44AE426082
+      9C1800000201494441545885EDD6CB8B8D711807F0CF3918D732A49159CD6268
+      DC4A59684A948E890D2525A394FF802522166CAC5C4AEC6DB062C1C6C2564A63
+      E1D2A44652CA25451A778BDFF39AD79973EDBCB350E75BA7E77D9EF7F79CEFF7
+      F95D9EDF4B175DFCE738D8C2987E948B265E8BFBF8DD64DC22BCC615948A205E
+      8873F81EE4CD04C02EFCC4914EC9F7E2558EB89E801276FAB7E2A3F826CD5CDB
+      18C49D1AC4F5046CC20F69A632CCC243DC6D87781E4E61B20179BD25D81FEF46
+      73B1ED11DB582BA18CCDD811BF03186F429C1730886B589EFBCF8B7887DEF04B
+      7812F16938D922593D01EBF002635810B1C5F828AD7F86D398A825E046870260
+      2008CFE462E7F134E76F8B9C15D5026E1620008E8588B9E157624C7FF8FDE16F
+      C9128AEE50D7A5A9DF10FEE3B04361DF865D3A530226C26615BF0FDB3B7DE8CC
+      085812F653D86C434E86ED0B9B09FB2BA09596DA0A2AF88547E1AF0C3B117675
+      D8F16A01630590F74847EE96A90A2BF880E7E16FC54BBCA94E2E6138122AD817
+      49AD9E821EA9117D365575596A3C57731CCF70A99D8A8EE34B0B02FAA43E3F92
+      CB3F242D4776018D68D08A1B6100B79B08A8C62AA91F5C087FB6B42FDABA8CAA
+      B15BDA4CCD04CC91A6FE01E647EC84741DAFE94400E9589DC5D70602603D96C5
+      F31E69290E774A9EC710EE3510906158AAFCB2823EC9AA31DAE47D599A81C23F
+      4ABBE8A230FC015DAABA44B4B3F7E60000000049454E44AE426082
     }
   end
   object btnSair: TSpeedButton
     Left = 8
     Height = 22
-    Top = 115
+    Top = 170
     Width = 103
     Caption = 'Sair           '
     Flat = True
@@ -173,9 +174,9 @@ object MenuLateral: TMenuLateral
   object btnBrilho: TSpeedButton
     Left = 8
     Height = 22
-    Top = 64
-    Width = 103
-    Caption = 'Brilho        '
+    Top = 129
+    Width = 68
+    Caption = '100%'
     Color = clDefault
     Flat = True
     Font.Color = clBlack
@@ -183,14 +184,15 @@ object MenuLateral: TMenuLateral
     Font.Quality = fqAntialiased
     Font.Style = [fsBold]
     Layout = blGlyphRight
+    OnClick = btnBrilhoClick
     ParentFont = False
   end
   object btnVolume: TSpeedButton
     Left = 8
     Height = 22
-    Top = 36
-    Width = 103
-    Caption = 'Volume      '
+    Top = 65
+    Width = 68
+    Caption = '100%'
     Color = clDefault
     Flat = True
     Font.Color = clBlack
@@ -198,6 +200,63 @@ object MenuLateral: TMenuLateral
     Font.Quality = fqAntialiased
     Font.Style = [fsBold]
     Layout = blGlyphRight
+    OnClick = btnVolumeClick
     ParentFont = False
+  end
+  object shpLinha: TShape
+    Left = 0
+    Height = 480
+    Top = 0
+    Width = 2
+    Align = alLeft
+  end
+  object lbVolume: TLabel
+    Left = 8
+    Height = 16
+    Top = 43
+    Width = 112
+    Alignment = taCenter
+    AutoSize = False
+    Caption = 'VOLUME'
+    Font.Height = -15
+    Font.Name = 'Arial'
+    Font.Style = [fsBold]
+    ParentColor = False
+    ParentFont = False
+  end
+  object shDivisor2: TShape
+    Left = 8
+    Height = 2
+    Top = 98
+    Width = 108
+    Pen.Width = 2
+  end
+  object lbBrilho: TLabel
+    Left = 8
+    Height = 16
+    Top = 106
+    Width = 112
+    Alignment = taCenter
+    AutoSize = False
+    Caption = 'BRILHO'
+    Font.Height = -15
+    Font.Name = 'Arial'
+    Font.Style = [fsBold]
+    ParentColor = False
+    ParentFont = False
+  end
+  object shDivisor3: TShape
+    Left = 8
+    Height = 2
+    Top = 160
+    Width = 108
+    Pen.Width = 2
+  end
+  object shDivisor1: TShape
+    Left = 8
+    Height = 2
+    Top = 36
+    Width = 108
+    Pen.Width = 2
   end
 end
