--- a/UMenuPrincipal.lfm
+++ b/UMenuPrincipal.lfm
@@ -1478,7 +1478,7 @@ object MenuPrincipal: TMenuPrincipal
     }
   end
   object imgTitulo: TImage
-    Left = 96
+    Left = 88
     Height = 82
     Top = 16
     Width = 624
@@ -2300,12 +2300,12 @@ object MenuPrincipal: TMenuPrincipal
     }
   end
   object btnDesenho: TImage
-    Left = 96
+    Left = 91
     Height = 40
     Top = 392
     Width = 250
     AutoSize = True
-    OnClick = OpenDraw
+    OnClick = AbrirDesenho
     Picture.Data = {
       1754506F727461626C654E6574776F726B477261706869636D13000089504E47
       0D0A1A0A0000000D49484452000000FA000000280806000000D71AE719000013
@@ -2467,11 +2467,12 @@ object MenuPrincipal: TMenuPrincipal
     }
   end
   object btnSonsAnimais: TImage
-    Left = 464
+    Left = 459
     Height = 40
     Top = 392
     Width = 250
     AutoSize = True
+    OnClick = AbrirSonsAnimais
     Picture.Data = {
       1754506F727461626C654E6574776F726B47726170686963F515000089504E47
       0D0A1A0A0000000D49484452000000FA000000280806000000D71AE719000015
@@ -2653,7 +2654,7 @@ object MenuPrincipal: TMenuPrincipal
     }
   end
   object shDesenho: TShape
-    Left = 165
+    Left = 161
     Height = 115
     Top = 272
     Width = 111
@@ -2662,12 +2663,12 @@ object MenuPrincipal: TMenuPrincipal
     Pen.Width = 10
   end
   object imgDesenho: TImage
-    Left = 171
+    Left = 167
     Height = 104
     Top = 278
     Width = 100
     AutoSize = True
-    OnClick = OpenDraw
+    OnClick = AbrirDesenho
     Picture.Data = {
       1754506F727461626C654E6574776F726B47726170686963E12A000089504E47
       0D0A1A0A0000000D49484452000000640000006808060000000720552F000000
@@ -3016,7 +3017,7 @@ object MenuPrincipal: TMenuPrincipal
     }
   end
   object shSonsAnimais: TShape
-    Left = 533
+    Left = 529
     Height = 115
     Top = 272
     Width = 111
@@ -3025,12 +3026,12 @@ object MenuPrincipal: TMenuPrincipal
     Pen.Width = 10
   end
   object imgSonsAnimais: TImage
-    Left = 539
+    Left = 535
     Height = 104
     Top = 278
     Width = 100
     AutoSize = True
-    OnClick = OpenDraw
+    OnClick = AbrirSonsAnimais
     Picture.Data = {
       1754506F727461626C654E6574776F726B47726170686963E12A000089504E47
       0D0A1A0A0000000D49484452000000640000006808060000000720552F000000
